# Line-based-Automatic-Calibration-of-LiDAR-and-Cameras

./: README.md  使用说明.docx  技术报告-基于单目相机和3D激光雷达的自动在线标定技术.docx
auto_cali/: CMakeLists.txt  calibrated_result  camera_lidar_info.yaml  config0.yaml  config1.yaml  config2.yaml  config3.yaml  package.xml  python.txt  traffficLightconfig0.yaml
auto_cali/data0/: list.txt
auto_cali/data0/result/: calibrated_result
auto_cali/include/: auto_calib.h  g2o_type.h
auto_cali/src/: auto_calib.cpp  auto_calib_node.cpp
auto_cali/src/1/: LSD.cpp  orbslam2.cpp
g2o/g2o/solvers/csparse/: csparse_extension.h
